--- a/DesafioNotas/app/src/main/AndroidManifest.xml
+++ b/DesafioNotas/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.desafionotas">
 
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.SEND_SMS" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,6 +12,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.DesafioNotas">
+        <activity
+            android:name=".ListadoContactosActivity"
+            android:exported="false" />
         <activity
             android:name=".DetalleNotasActivity"
             android:exported="false" />
