splash screen aplicada y funcionando (mejorable)

--- a/DesafioNotas/app/src/main/AndroidManifest.xml
+++ b/DesafioNotas/app/src/main/AndroidManifest.xml
@@ -11,12 +11,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.DesafioNotas">
+        android:theme="@style/launcher">
         <activity
-            android:name=".DetalleNotasActivity"
-            android:exported="false" />
-        <activity
-            android:name=".MainActivity"
+            android:name=".SplashScreen"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,6 +21,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".DetalleNotasActivity"
+            android:exported="false" />
+        <activity
+            android:name=".MainActivity"
+            android:exported="true"/>
+        <meta-data
+            android:name="com.google.android.actions"
+            android:resource="@xml/splash_screen" />
     </application>
 
 </manifest>
