--- a/DesafioNotas/app/src/main/AndroidManifest.xml
+++ b/DesafioNotas/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.desafionotas">
+    package="com.example.desafionotas" >
 
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.SEND_SMS" />
@@ -11,10 +11,10 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/launcher">
+        android:theme="@style/Theme.DesafioNotas" >
         <activity
             android:name=".SplashScreen"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -26,10 +26,7 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="true"/>
-        <meta-data
-            android:name="com.google.android.actions"
-            android:resource="@xml/splash_screen" />
+            android:exported="false" />
     </application>
 
 </manifest>
